# oplivilqo

./: .gitignore  LICENSE  README.md  ai_client.py  build.ps1  clipboard.py  config.py  core.py  gui.py  gui.spec  gui_components.py  gui_hotkeys.py  gui_settings.py  hotkeys.py  image_fit_paste.py  image_processor.py  index.html  main.py  main_tui.py  manosaba_core.py  manosaba_gui.py  pyproject.toml  requirements.txt  sentiment_analyzer.py  text_fit_draw.py
.github/workflows/: build.yml  build_resources.yml  build_with_resources.yml  onekey.yml
_internal/: text_fit_draw.py
assets/chara/alisa/: meta.yml
assets/chara/anan/: meta.yml
assets/chara/coco/: meta.yml
assets/chara/ema/: meta.yml
assets/chara/hanna/: meta.yml
assets/chara/hiro/: meta.yml
assets/chara/mago/: meta.yml
assets/chara/meruru/: meta.yml
assets/chara/miria/: meta.yml
assets/chara/nanoka/: meta.yml
assets/chara/noa/: meta.yml
assets/chara/reia/: meta.yml
assets/chara/sherri/: meta.yml
assets/chara/yuki/: meta.yml
assets/templates/chara_template/: meta.yml
config/: backgrounds.yml  chara_meta.yml  fonts.yml  keymap.yml  process_whitelist.yml  settings.yml  textual.tcss
css/: tabler.min.css
js/: consts.js  functions.js
src/: clipboard_handler.py  image_generator.py  main.py  tui.py
